# sysmwatch

./: .gitignore  README.md  pyproject.toml
html/: modified_report.html
sysmwatch/: __init__.py  listen.py  listenq.py  main.py  wnotify.py
