[tool.poetry]
name = "sysmwatch"
version = "0.1.0"
description = "Watch for changes in system metadata"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
psycopg2-binary = "^2.8.6"
click = "^7.1.2"
requests = "^2.25.1"
dateparser = "^1.0.0"
progress = "^1.5"
ojson = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
